--- a/about.html
+++ b/about.html
@@ -1,11 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Intervenção Rápida</title>
+    <link rel="stylesheet" href="#">
 </head>
 <body>
-    
+    <!--Logotipo-->
+    <Header>
+        <div>
+            <img src="imagens/logotipo.png" alt="logotipo">
+        </div>
+    </Header>
+    <!--Menu-->
+    <nav>
+        <ul>
+            <li><a href="home.html">Página Inicial</a></li>
+            <li><a href="about.html">Sobre</a></li>
+            <li><a href="gallery.html">Galeria</a></li>
+            <li><a href="contact.html">Contacto</a></li>
+        </ul>
+    </nav>
+    <!--História e objectivo do jogo-->
+    <section>
+        <div>
+            <p>História e objectivo do jogo</p>
+        </div>
+    </section>
+    <!--Componentes do jogo-->
+    <section>
+        <div>
+            <div>
+                <h2>Componentes do jogo</h2>
+            </div>
+            <div>
+                <img src="imagens/tabuleiro_frente.jpg" alt="Tabuleiro_frente">
+            </div>
+            <div>
+                <img src="imagens/tabuleiro_trás.jpg" alt="Tabuleiro_trás">
+            </div>
+            <div>
+                <img src="imagens/peças1.jpg" alt="peças_de_jogo">
+            </div>
+            <div>
+                <img src="imagens/carros.jpg" alt="carros_do_jogo">
+            </div>
+            <div>
+                <img src="imagens/cartas.jpg" alt="Cartas_de_jogo">
+            </div>
+            <div>
+                <p>Como jogar: </p>
+            </div>
+        </div>
+    </section>
+    <!--Diferencial-->
+    <section>
+        <h2>O que torna este jogo único</h2>
+    </section>
+    <!--Rodapé-->
+    <footer>
+        <ul>
+            <li><a href="faqs.html">FAQ</a></li>
+            <li><a href="news.html">Notícias</a></li>
+            <li><a href="patrocinios.html">Patrocínios</a></li>
+        </ul>
+        <p>&copy; Copyright Intervenção Rápida 2024</p>
+    </footer>
 </body>
 </html>
