--- a/faqs.html
+++ b/faqs.html
@@ -22,44 +22,22 @@
             <li><a href="contact.html">Contacto</a></li>
         </ul>
     </nav>
-    <!--Destaque-->
+    <!--Regras do Jogo-->
     <section>
-        <h1>Título chamativo</h1>
         <div>
-            <div>
-                <img src="imagens/tabuleiro_frente.jpg" alt="mapa_concelho">
-            </div>
-            <div>
-                <img src="imagens/tabuleiro_trás.jpg" alt="simulador_cidade">
-            </div>
+            <p>Regras específicas do jogo</p>
         </div>
     </section>
-    <!--Descrição-->
-    <section>
-        <p>Breve descrição do jogo</p>
-    </section>
-    <!--Botão Trailer-->
+    <!--Informações sobre produção e envio-->
     <section>
         <div>
-            <button>Ver Trailer</button>
+            <p>Informações sobre produção e envio (custos e prazos de entrega)</p>
         </div>
     </section>
-    <!--Comentários-->
+    <!--Contacto de suporte-->
     <section>
         <div>
-            <h2>Testemunhos/Comentários</h2>
-            <div>
-                <p>comentário1</p>
-            </div>
-            <div>
-                <p>comentário2</p>
-            </div>
-            <div>
-                <p>comentário3</p>
-            </div>
-            <div>
-                <p>comentário4</p>
-            </div>
+            <p>Informações de contacto de suporte</p>
         </div>
     </section>
     <!--Rodapé-->
