--- a/gallery.html
+++ b/gallery.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Intervenção Rápida</title>
+    <link rel="stylesheet" href="#">
 </head>
 <body>
-    
+    <!--Logotipo-->
+    <Header>
+        <div>
+            <img src="imagens/logotipo.png" alt="logotipo">
+        </div>
+    </Header>
+    <!--Menu-->
+    <nav>
+        <ul>
+            <li><a href="home.html">Página Inicial</a></li>
+            <li><a href="about.html">Sobre</a></li>
+            <li><a href="gallery.html">Galeria</a></li>
+            <li><a href="contact.html">Contacto</a></li>
+        </ul>
+    </nav>
+    <!--Galeria-->
+    <section>
+        <div>
+            <div>
+                <p>fotos</p>
+            </div>
+            <div>
+                <p>videos</p>
+            </div>
+            <div>
+                <p>Evento 1</p>
+            </div>
+            <div>
+                <p>Evento 2</p>
+            </div>
+        </div>
+    </section>
+    <!--Rodapé-->
+    <footer>
+        <ul>
+            <li><a href="faqs.html">FAQ</a></li>
+            <li><a href="news.html">Notícias</a></li>
+            <li><a href="patrocinios.html">Patrocínios</a></li>
+        </ul>
+        <p>&copy; Copyright Intervenção Rápida 2024</p>
+    </footer>
 </body>
 </html>
