--- a/news.html
+++ b/news.html
@@ -22,44 +22,24 @@
             <li><a href="contact.html">Contacto</a></li>
         </ul>
     </nav>
-    <!--Destaque-->
+    <!--Novidades sobre actualizações ou versões futuras -->
     <section>
-        <h1>Título chamativo</h1>
         <div>
-            <div>
-                <img src="imagens/tabuleiro_frente.jpg" alt="mapa_concelho">
-            </div>
-            <div>
-                <img src="imagens/tabuleiro_trás.jpg" alt="simulador_cidade">
-            </div>
+            <p>Novidades sobre actualizações ou versões futuras</p>
         </div>
     </section>
-    <!--Descrição-->
-    <section>
-        <p>Breve descrição do jogo</p>
-    </section>
-    <!--Botão Trailer-->
+    <!--Próximos eventos-->
     <section>
         <div>
-            <button>Ver Trailer</button>
+            <p>Próximos Eventos/Torneios</p>
         </div>
     </section>
-    <!--Comentários-->
+    <!--Dicas de estratégia-->
     <section>
         <div>
-            <h2>Testemunhos/Comentários</h2>
-            <div>
-                <p>comentário1</p>
-            </div>
-            <div>
-                <p>comentário2</p>
-            </div>
-            <div>
-                <p>comentário3</p>
-            </div>
-            <div>
-                <p>comentário4</p>
-            </div>
+            <p>
+                Dicas de estratégia para o jogo
+            </p>
         </div>
     </section>
     <!--Rodapé-->
