--- a/patrocinios.html
+++ b/patrocinios.html
@@ -22,44 +22,34 @@
             <li><a href="contact.html">Contacto</a></li>
         </ul>
     </nav>
-    <!--Destaque-->
+    <!--Dedicatória aos patrocinadores-->
     <section>
-        <h1>Título chamativo</h1>
         <div>
-            <div>
-                <img src="imagens/tabuleiro_frente.jpg" alt="mapa_concelho">
-            </div>
-            <div>
-                <img src="imagens/tabuleiro_trás.jpg" alt="simulador_cidade">
-            </div>
+            <p>Dedicatória aos patrocinadores</p>
         </div>
     </section>
-    <!--Descrição-->
-    <section>
-        <p>Breve descrição do jogo</p>
-    </section>
-    <!--Botão Trailer-->
+    <!--Logotipos dos patrocinadores com ou sem links para os próprios sites-->
     <section>
         <div>
-            <button>Ver Trailer</button>
+            <a href="https://pixabay.com/" target="_blank"><img src="imagens/patrocinadores/animal-2028258_640.png" alt=""></a>
         </div>
-    </section>
-    <!--Comentários-->
-    <section>
         <div>
-            <h2>Testemunhos/Comentários</h2>
-            <div>
-                <p>comentário1</p>
-            </div>
-            <div>
-                <p>comentário2</p>
-            </div>
-            <div>
-                <p>comentário3</p>
-            </div>
-            <div>
-                <p>comentário4</p>
-            </div>
+            <img src="imagens/patrocinadores/bullet-2157465_640.png" alt="">
+        </div>
+        <div>
+            <img src="imagens/patrocinadores/food-2074638_640.png" alt="">
+        </div>
+        <div>
+            <img src="imagens/patrocinadores/humming-bird-1935665_640.png" alt="">
+        </div>
+        <div>
+            <img src="imagens/patrocinadores/logo-1871975_640.png" alt="">
+        </div>
+        <div>
+            <img src="imagens/patrocinadores/logo-2078018_640.png" alt="">
+        </div>
+        <div>
+            <img src="imagens/patrocinadores/lotus-flower-1805784_640.png" alt="">
         </div>
     </section>
     <!--Rodapé-->
