--- a/home.html
+++ b/home.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intervenção Rápida</title>
-    <link rel="stylesheet" href="#">
+    <link rel="stylesheet" href="styles/home.css">
 </head>
 <body>
     <!--Logotipo-->
     <Header>
         <div>
-            <img src="imagens/logotipo.png" alt="logotipo">
+            <img class="logotipo" src="imagens/logotipo_intervenção_rápida.png" alt="logotipo">
         </div>
     </Header>
     <!--Menu-->
-    <nav>
+    <nav class="menu">
         <ul>
             <li><a href="home.html">Página Inicial</a></li>
             <li><a href="about.html">Sobre</a></li>
@@ -27,10 +27,10 @@
         <h1>Título chamativo</h1>
         <div>
             <div>
-                <img src="imagens/tabuleiro_frente.jpg" alt="mapa_concelho">
+                <img src="imagens/Tabuleiro_1.jpg" alt="mapa_concelho">
             </div>
             <div>
-                <img src="imagens/tabuleiro_trás.jpg" alt="simulador_cidade">
+                <img src="imagens/Tabuleiro_2.jpg" alt="simulador_cidade">
             </div>
         </div>
     </section>
