--- a/home.html
+++ b/home.html
@@ -8,20 +8,20 @@
 </head>
 <body>
     <!--Logotipo-->
-    <Header>
+    <header>
         <div>
             <img class="logotipo" src="imagens/logotipo_intervenção_rápida.png" alt="logotipo">
         </div>
-    </Header>
     <!--Menu-->
-    <nav class="menu">
-        <ul>
-            <li><a href="home.html">Página Inicial</a></li>
-            <li><a href="about.html">Sobre</a></li>
-            <li><a href="gallery.html">Galeria</a></li>
-            <li><a href="contact.html">Contacto</a></li>
-        </ul>
-    </nav>
+        <menu>
+            <ul>
+                <li><a href="home.html">Página Inicial</a></li>
+                <li><a href="about.html">Sobre</a></li>
+                <li><a href="gallery.html">Galeria</a></li>
+                <li><a href="contact.html">Contacto</a></li>
+            </ul>
+        </menu>
+    </header>
     <!--Destaque-->
     <section>
         <h1>Título chamativo</h1>
