--- a/home.html
+++ b/home.html
@@ -13,23 +13,23 @@
             <img class="logotipo" src="imagens/logotipo_intervenção_rápida.png" alt="logotipo">
         </div>
     <!--Menu-->
-        <menu>
+        <nav>
             <ul>
                 <li><a href="home.html">Página Inicial</a></li>
                 <li><a href="about.html">Sobre</a></li>
                 <li><a href="gallery.html">Galeria</a></li>
                 <li><a href="contact.html">Contacto</a></li>
             </ul>
-        </menu>
+        </nav>
     </header>
     <!--Destaque-->
     <section>
         <h1>Título chamativo</h1>
         <div>
-            <div>
+            <div class="tab1">
                 <img src="imagens/Tabuleiro_1.jpg" alt="mapa_concelho">
             </div>
-            <div>
+            <div class="tab2">
                 <img src="imagens/Tabuleiro_2.jpg" alt="simulador_cidade">
             </div>
         </div>
