--- a/home.html
+++ b/home.html
@@ -13,19 +13,21 @@
             <img class="logotipo" src="imagens/logotipo_intervenção_rápida.png" alt="logotipo">
         </div>
     <!--Menu-->
-        <nav>
-            <ul>
-                <li><a href="home.html">Página Inicial</a></li>
-                <li><a href="about.html">Sobre</a></li>
-                <li><a href="gallery.html">Galeria</a></li>
-                <li><a href="contact.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <div id="menu_container">
+            <nav>
+                <ul>
+                    <li><a href="home.html">Página Inicial</a></li>
+                    <li><a href="about.html">Sobre</a></li>
+                    <li><a href="gallery.html">Galeria</a></li>
+                    <li><a href="contact.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <!--Destaque-->
     <section>
-        <h1>Título chamativo</h1>
-        <div>
+        <h1 class="titulo">Título chamativo</h1>
+        <div id="img_destaque">
             <div class="tab1">
                 <img src="imagens/Tabuleiro_1.jpg" alt="mapa_concelho">
             </div>
