--- a/home.html
+++ b/home.html
@@ -37,30 +37,24 @@
         </div>
     </section>
     <!--Descrição-->
-    <section>
-        <p>Breve descrição do jogo</p>
+    <section class="resumo_jogo">
+        <p class="resumo">Breve descrição do jogo</p>
     </section>
     <!--Botão Trailer-->
-    <section>
+    <section id="trailer">
         <div>
-            <button>Ver Trailer</button>
+            <button class="botao">Ver Trailer</button>
         </div>
     </section>
     <!--Comentários-->
     <section>
-        <div>
-            <h2>Testemunhos/Comentários</h2>
-            <div>
-                <p>comentário1</p>
-            </div>
-            <div>
-                <p>comentário2</p>
-            </div>
-            <div>
-                <p>comentário3</p>
-            </div>
-            <div>
-                <p>comentário4</p>
+        <div class="comment">
+            <h2 class="titulo_comment">Testemunhos/Comentários</h2>
+            <div class="comment_box">
+                <p class="com1">comentário1</p>
+                <p class="com2">comentário2</p>
+                <p class="com3">comentário3</p>
+                <p class="com4">comentário4</p>
             </div>
         </div>
     </section>
