--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
         </div>
     </header>
     <!--Destaque-->
-    <section>
+    <section class="img_principal">
         <h1 class="titulo">Título chamativo</h1>
         <div id="img_destaque">
             <div class="tab1">
@@ -47,7 +47,7 @@
         </div>
     </section>
     <!--Comentários-->
-    <section>
+    <section class="opinion">
         <div class="comment">
             <h2 class="titulo_comment">Testemunhos/Comentários</h2>
             <div class="comment_box">
