--- a/home.html
+++ b/home.html
@@ -42,19 +42,17 @@
     </section>
     <!--Botão Trailer-->
     <section id="trailer">
-        <div>
-            <button class="botao">Ver Trailer</button>
-        </div>
+        
     </section>
     <!--Comentários-->
-    <section class="opinion">
-        <div class="comment">
-            <h2 class="titulo_comment">Testemunhos/Comentários</h2>
-            <div class="comment_box">
-                <p class="com1">comentário1</p>
-                <p class="com2">comentário2</p>
-                <p class="com3">comentário3</p>
-                <p class="com4">comentário4</p>
+    <section class="opinion_box">
+        <h2>Testemunhos/Comentários</h2>
+        <div class="comment_box">
+            <div class="comment">
+                <p>comentário1</p>
+                <p>comentário2</p>
+                <p>comentário3</p>
+                <p>comentário4</p>
             </div>
         </div>
     </section>
