secção trailer e comentários

--- a/home.html
+++ b/home.html
@@ -39,8 +39,15 @@
     <!--Descrição-->
     <section class="resumo_jogo">
         <p class="resumo">Breve descrição do jogo</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Impedit dolorum molestias, est, recusandae ea accusantium quia delectus ut tenetur repellat, 
+            odit optio? Ut perferendis totam ad atque excepturi rem cumque. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Impedit dolorum molestias, est, recusandae ea accusantium quia delectus ut tenetur repellat, 
+            odit optio? Ut perferendis totam ad atque excepturi rem cumque. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Impedit dolorum molestias, est, recusandae ea accusantium quia delectus ut tenetur repellat, 
+            odit optio? Ut perferendis totam ad atque excepturi rem cumque.</p>
     </section>
-    <!--Botão Trailer-->
+    <!--Trailer-->
     <section id="trailer">
         
     </section>
