página inicial concluída

--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
             <img class="logotipo" src="imagens/logotipo_intervenção_rápida.png" alt="logotipo">
         </div>
     <!--Menu-->
-        <div id="menu_container">
+        <div>
             <nav>
                 <ul>
                     <li><a href="home.html">Página Inicial</a></li>
@@ -25,8 +25,8 @@
         </div>
     </header>
     <!--Destaque-->
+    <h1 class="titulo">Título chamativo</h1>
     <section class="img_principal">
-        <h1 class="titulo">Título chamativo</h1>
         <div id="img_destaque">
             <div class="tab1">
                 <img src="imagens/Tabuleiro_1.jpg" alt="mapa_concelho">
@@ -38,8 +38,7 @@
     </section>
     <!--Descrição-->
     <section class="resumo_jogo">
-        <p class="resumo">Breve descrição do jogo</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        <p class="resumo">Breve descrição do jogo. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Impedit dolorum molestias, est, recusandae ea accusantium quia delectus ut tenetur repellat, 
             odit optio? Ut perferendis totam ad atque excepturi rem cumque. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Impedit dolorum molestias, est, recusandae ea accusantium quia delectus ut tenetur repellat, 
@@ -49,19 +48,43 @@
     </section>
     <!--Trailer-->
     <section id="trailer">
-        
+        <video src="videos/trailer.mp4" controls></video>
     </section>
     <!--Comentários-->
-    <section class="opinion_box">
+    <div class="testemunho">
         <h2>Testemunhos/Comentários</h2>
-        <div class="comment_box">
-            <div class="comment">
-                <p>comentário1</p>
-                <p>comentário2</p>
-                <p>comentário3</p>
-                <p>comentário4</p>
-            </div>
-        </div>
+    </div>
+    <section class="opinion_box">
+        <ul>
+            <li>
+                <h3>Nome1</h3>
+                 <p>comentário1 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Accusantium, rerum. Molestias corrupti in iusto repudiandae aperiam 
+                    doloribus nemo ea hic consequuntur odio, expedita impedit obcaecati ipsum, 
+                    ad rem quidem molestiae.</p>
+            </li>
+            <li>
+                <h3>Nome2</h3>
+                <p>comentário2 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Accusantium, rerum. Molestias corrupti in iusto repudiandae aperiam 
+                    doloribus nemo ea hic consequuntur odio, expedita impedit obcaecati ipsum, 
+                    ad rem quidem molestiae.</p>
+            </li>
+            <li>
+                <h3>Nome3</h3>
+                <p>comentário3 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Accusantium, rerum. Molestias corrupti in iusto repudiandae aperiam 
+                    doloribus nemo ea hic consequuntur odio, expedita impedit obcaecati ipsum, 
+                    ad rem quidem molestiae.</p>
+            </li>
+            <li>
+                <h3>Nome4</h3>
+                 <p>comentário4 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Accusantium, rerum. Molestias corrupti in iusto repudiandae aperiam 
+                    doloribus nemo ea hic consequuntur odio, expedita impedit obcaecati ipsum, 
+                    ad rem quidem molestiae.</p>
+            </li>
+        </ul>
     </section>
     <!--Rodapé-->
     <footer>
