--- a/about.html
+++ b/about.html
@@ -4,24 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intervenção Rápida</title>
-    <link rel="stylesheet" href="#">
+    <link rel="stylesheet" href="styles/home.css">
 </head>
 <body>
     <!--Logotipo-->
-    <Header>
+    <header>
         <div>
-            <img src="imagens/logotipo.png" alt="logotipo">
+            <img class="logotipo" src="imagens/logotipo_intervenção_rápida.png" alt="logotipo">
         </div>
-    </Header>
     <!--Menu-->
-    <nav>
-        <ul>
-            <li><a href="home.html">Página Inicial</a></li>
-            <li><a href="about.html">Sobre</a></li>
-            <li><a href="gallery.html">Galeria</a></li>
-            <li><a href="contact.html">Contacto</a></li>
-        </ul>
-    </nav>
+        <div>
+            <nav>
+                <ul>
+                    <li><a href="home.html">Página Inicial</a></li>
+                    <li><a href="about.html">Sobre</a></li>
+                    <li><a href="gallery.html">Galeria</a></li>
+                    <li><a href="contact.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <!--História e objectivo do jogo-->
     <section>
         <div>
@@ -35,10 +37,10 @@
                 <h2>Componentes do jogo</h2>
             </div>
             <div>
-                <img src="imagens/tabuleiro_frente.jpg" alt="Tabuleiro_frente">
+                <img src="imagens/Tabuleiro_1.jpg" alt="Tabuleiro_frente">
             </div>
             <div>
-                <img src="imagens/tabuleiro_trás.jpg" alt="Tabuleiro_trás">
+                <img src="imagens/Tabuleiro_2.jpg" alt="Tabuleiro_trás">
             </div>
             <div>
                 <img src="imagens/peças1.jpg" alt="peças_de_jogo">
