--- a/about.html
+++ b/about.html
@@ -25,36 +25,42 @@
         </div>
     </header>
     <!--História e objectivo do jogo-->
-    <section>
-        <div>
-            <p>História e objectivo do jogo</p>
-        </div>
-    </section>
+    <div class="historia">
+        <p>História e objectivo do jogo. Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Exercitationem natus soluta nemo explicabo voluptates dolore, rem modi, a incidunt error excepturi 
+            facere tempore deserunt id aliquid? Quia ea ad velit. Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Exercitationem natus soluta nemo explicabo voluptates dolore, rem modi, a incidunt error excepturi 
+            facere tempore deserunt id aliquid? Quia ea ad velit. Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Exercitationem natus soluta nemo explicabo voluptates dolore, rem modi, a incidunt error excepturi 
+            facere tempore deserunt id aliquid? Quia ea ad velit. Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Exercitationem natus soluta nemo explicabo voluptates dolore, rem modi, a incidunt error excepturi 
+            facere tempore deserunt id aliquid? Quia ea ad velit. Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Exercitationem natus soluta nemo explicabo voluptates dolore, rem modi, a incidunt error excepturi 
+            facere tempore deserunt id aliquid? Quia ea ad velit.</p>
+    </div>
     <!--Componentes do jogo-->
-    <section>
-        <div>
-            <div>
-                <h2>Componentes do jogo</h2>
-            </div>
-            <div>
-                <img src="imagens/Tabuleiro_1.jpg" alt="Tabuleiro_frente">
-            </div>
-            <div>
-                <img src="imagens/Tabuleiro_2.jpg" alt="Tabuleiro_trás">
-            </div>
-            <div>
-                <img src="imagens/peças1.jpg" alt="peças_de_jogo">
-            </div>
-            <div>
-                <img src="imagens/carros.jpg" alt="carros_do_jogo">
-            </div>
-            <div>
-                <img src="imagens/cartas.jpg" alt="Cartas_de_jogo">
-            </div>
-            <div>
+    <h2 class="componentes_txt">Componentes do jogo</h2>
+    <section class="componentes">
+        <ul>
+            <li>
+                <img class="img1" src="imagens/Tabuleiro_1.jpg" alt="Tabuleiro_frente">
+            </li>
+            <li>
+                <img class="img1" src="imagens/Tabuleiro_2.jpg" alt="Tabuleiro_trás">
+            </li>
+            <li>
+                <img class="img1" src="imagens/peças1.jpg" alt="peças_de_jogo">
+            </li>
+            <li>
+                <img class="img1" src="imagens/carros.jpg" alt="carros_do_jogo">
+            </li>
+            <li>
+                <img class="img1" src="imagens/cartas.jpg" alt="Cartas_de_jogo">
+            </li>
+            <li>
                 <p>Como jogar: </p>
-            </div>
-        </div>
+            </li>
+        </ul>
     </section>
     <!--Diferencial-->
     <section>
