--- a/about.html
+++ b/about.html
@@ -57,14 +57,18 @@
             <li>
                 <img class="img1" src="imagens/cartas.jpg" alt="Cartas_de_jogo">
             </li>
-            <li>
-                <p>Como jogar: </p>
-            </li>
         </ul>
+        <p class="regras">Como jogar: Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Eveniet placeat quibusdam nulla id, non, quis, quam suscipit rem doloremque sit a vel 
+                voluptate sed architecto possimus ratione similique aliquam officia! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Eveniet placeat quibusdam nulla id, non, quis, quam suscipit rem doloremque sit a vel 
+                voluptate sed architecto possimus ratione similique aliquam officia!Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Eveniet placeat quibusdam nulla id, non, quis, quam suscipit rem doloremque sit a vel 
+                voluptate sed architecto possimus ratione similique aliquam officia! </p>
     </section>
     <!--Diferencial-->
     <section>
-        <h2>O que torna este jogo único</h2>
+        <h2 class="diferencial">O que torna este jogo único</h2>
     </section>
     <!--Rodapé-->
     <footer>
