--- a/contact.html
+++ b/contact.html
@@ -26,24 +26,22 @@
     </header>
     <!--Contacto-->
     <form action="#" method="post">
-        <fieldset>
-            <legend>Dúvidas, Sugestões, Suporte, Opiniões</legend>
+            <p>Dúvidas, Sugestões, Suporte, Opiniões</p>
             <p>
                 <label for="inome">Nome: </label>
-                <input type="text" name="nome" id="inome" required>
+                <input type="text" name="nome" id="inome" placeholder="Escreva o seu Nome" required>
             </p>
             <p>
                 <label for="iemail">Email: </label>
-                <input type="email" name="email" id="iemail" autocomplete="email" required>
+                <input type="email" name="email" id="iemail" autocomplete="email" placeholder="Escreva o seu Email" required>
             </p>
             <p>
                 <label for="imensagem">Mensagem: </label>
-                <textarea name="Mensagem" id="imensagem" cols="50" rows="10" required></textarea>
+                <textarea name="Mensagem" id="imensagem" cols="50" rows="10" placeholder="Escreva a Mensagem" required></textarea>
             </p>
             <p>
                 <input type="submit" value="Enviar">
             </p>
-        </fieldset>
     </form>
     <!--Rodapé-->
     <footer>
