--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     </header>
     <!--Contacto-->
     <form action="#" method="post">
-            <p>Dúvidas, Sugestões, Suporte, Opiniões</p>
+            <p class="titulo_form">Dúvidas, Sugestões, Suporte, Opiniões:</p>
             <p>
                 <label for="inome">Nome: </label>
                 <input type="text" name="nome" id="inome" placeholder="Escreva o seu Nome" required>
@@ -35,13 +35,13 @@
                 <label for="iemail">Email: </label>
                 <input type="email" name="email" id="iemail" autocomplete="email" placeholder="Escreva o seu Email" required>
             </p>
-            <p>
-                <label for="imensagem">Mensagem: </label>
-                <textarea name="Mensagem" id="imensagem" cols="50" rows="10" placeholder="Escreva a Mensagem" required></textarea>
-            </p>
-            <p>
-                <input type="submit" value="Enviar">
-            </p>
+            <div class="mensagem_grupo">
+                <p>
+                    <label for="imensagem">Mensagem: </label>
+                    <textarea name="Mensagem" id="imensagem" cols="80" rows="10" placeholder="Escreva a Mensagem" required></textarea>
+                    <input type="submit" value="Enviar">
+                </p>
+            </div>
     </form>
     <!--Rodapé-->
     <footer>
