--- a/patrocinios.html
+++ b/patrocinios.html
@@ -25,33 +25,29 @@
         </div>
     </header>
     <!--Dedicatória aos patrocinadores-->
-    <section>
+    <section class="dedicatoria">
         <div>
-            <p>Dedicatória aos patrocinadores</p>
+            <p>Dedicatória aos patrocinadores.... Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                Ipsum in nemo iusto, porro quo tempora magnam cupiditate at maiores voluptatem alias exercitationem 
+                voluptate ex optio perferendis reiciendis aspernatur! Error, cupiditate.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                Ipsum in nemo iusto, porro quo tempora magnam cupiditate at maiores voluptatem alias exercitationem 
+                voluptate ex optio perferendis reiciendis aspernatur! Error, cupiditate.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                Ipsum in nemo iusto, porro quo tempora magnam cupiditate at maiores voluptatem alias exercitationem 
+                voluptate ex optio perferendis reiciendis aspernatur! Error, cupiditate.</p>
         </div>
     </section>
     <!--Logotipos dos patrocinadores com ou sem links para os próprios sites-->
-    <section>
-        <div>
+    <section class="patrocinadores-logos">
+        <div class="logos-container">
             <a href="https://pixabay.com/" target="_blank"><img src="imagens/patrocinadores/animal-2028258_640.png" alt=""></a>
-        </div>
-        <div>
-            <img src="imagens/patrocinadores/bullet-2157465_640.png" alt="">
-        </div>
-        <div>
-            <img src="imagens/patrocinadores/food-2074638_640.png" alt="">
-        </div>
-        <div>
-            <img src="imagens/patrocinadores/humming-bird-1935665_640.png" alt="">
-        </div>
-        <div>
-            <img src="imagens/patrocinadores/logo-1871975_640.png" alt="">
-        </div>
-        <div>
-            <img src="imagens/patrocinadores/logo-2078018_640.png" alt="">
-        </div>
-        <div>
-            <img src="imagens/patrocinadores/lotus-flower-1805784_640.png" alt="">
+            <a href="https://pixabay.com/"><img src="imagens/patrocinadores/bullet-2157465_640.png" alt=""></a>
+            <a href="https://pixabay.com/"><img src="imagens/patrocinadores/food-2074638_640.png" alt=""></a>
+            <a href="https://pixabay.com/"><img src="imagens/patrocinadores/humming-bird-1935665_640.png" alt=""></a>
+            <a href="https://pixabay.com/"><img src="imagens/patrocinadores/logo-1871975_640.png" alt=""></a>
+            <a href="https://pixabay.com/"><img src="imagens/patrocinadores/logo-2078018_640.png" alt=""></a>
+            <a href="https://pixabay.com/"><img src="imagens/patrocinadores/lotus-flower-1805784_640.png" alt=""></a>
         </div>
     </section>
     <!--Rodapé-->
