--- a/patrocinios.html
+++ b/patrocinios.html
@@ -42,12 +42,12 @@
     <section class="patrocinadores-logos">
         <div class="logos-container">
             <a href="https://pixabay.com/" target="_blank"><img src="imagens/patrocinadores/animal-2028258_640.png" alt=""></a>
-            <a href="https://pixabay.com/"><img src="imagens/patrocinadores/bullet-2157465_640.png" alt=""></a>
-            <a href="https://pixabay.com/"><img src="imagens/patrocinadores/food-2074638_640.png" alt=""></a>
-            <a href="https://pixabay.com/"><img src="imagens/patrocinadores/humming-bird-1935665_640.png" alt=""></a>
-            <a href="https://pixabay.com/"><img src="imagens/patrocinadores/logo-1871975_640.png" alt=""></a>
-            <a href="https://pixabay.com/"><img src="imagens/patrocinadores/logo-2078018_640.png" alt=""></a>
-            <a href="https://pixabay.com/"><img src="imagens/patrocinadores/lotus-flower-1805784_640.png" alt=""></a>
+            <a href="https://pixabay.com/" target="_blank"><img src="imagens/patrocinadores/bullet-2157465_640.png" alt=""></a>
+            <a href="https://pixabay.com/" target="_blank"><img src="imagens/patrocinadores/food-2074638_640.png" alt=""></a>
+            <a href="https://pixabay.com/" target="_blank"><img src="imagens/patrocinadores/humming-bird-1935665_640.png" alt=""></a>
+            <a href="https://pixabay.com/" target="_blank"><img src="imagens/patrocinadores/logo-1871975_640.png" alt=""></a>
+            <a href="https://pixabay.com/" target="_blank"><img src="imagens/patrocinadores/logo-2078018_640.png" alt=""></a>
+            <a href="https://pixabay.com/" target="_blank"><img src="imagens/patrocinadores/lotus-flower-1805784_640.png" alt=""></a>
         </div>
     </section>
     <!--Rodapé-->
